k8s/django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-backend
  template:
    metadata:
      labels:
        app: django-backend
    spec:
      containers:
      - name: django-backend
        image: mctoosh94/mynotes:backend-96dd6f0605c23a79ab94849f9a726326317fcb08
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
