k8s/react-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-frontend
  template:
    metadata:
      labels:
        app: react-frontend
    spec:
      containers:
      - name: react-frontend
        image: mctoosh94/mynotes:frontend-222c271d48263433661ad1aa9fba0b46aba9d397
        imagePullPolicy: Always
        ports:
        - containerPort: 80
