k8s/react-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-frontend-service
spec:
  type: NodePort  # Or LoadBalancer in cloud environments
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30002  # Optionally specify a nodePort; otherwise, one will be allocated automatically
  selector:
    app: react-frontend
